<resources>
    <string name="app_name">XKCD Age Calculator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_licences">Open Source Licences</string>
    <string name="instructions">Enter your age to find the oldest and youngest ages you can date!</string>
    <string name="youngest">The youngest you can date is </string>
    <string name="oldest">The oldest you can date is </string>
    <string name="age">age</string>
    <string name="calculate">Calculate!</string>
</resources>
