<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/instructions"
        android:gravity="center" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_age"
        android:inputType="number"
        android:gravity="center"
        android:hint="@string/age" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:layout_gravity="center"
        android:id="@+id/btn_calculate"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:id="@+id/txt_youngest"
        tools:text="@string/youngest" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:id="@+id/txt_oldest"
        tools:text="@string/oldest" />

</LinearLayout>
